--- a/Backend/views/pdf/customInvoice_Ar.ejs
+++ b/Backend/views/pdf/customInvoice_Ar.ejs
@@ -169,14 +169,12 @@
             
 
                 <table width="100%" cellspacing="0" cellpadding="0" style="border:none;">
-                    <!-- <tr>
-                        <td width="100%" class="text-center text-bold" style="font-size:1.5rem;"><strong><%= data.topHeading %></strong></td>
-                    </tr> -->
+                 
                     <tr>
 
                         <td
                             style=" width: 100%; padding-top: 30px; font-size: 18px; font-weight: bold; text-align: center;">
-                            <strong>فاتورة</strong></td>
+                            <strong><%= data.topHeading %></strong></td>
                     </tr>
                 </table>
                 <table width="100%" cellspacing="0" cellpadding="0" style="border:none;">
@@ -201,18 +199,11 @@
                     <tr>
                         <!-- Billing Information -->
                         <td width="50%">
-                            <!-- <p style="line-height: 1.5rem;"><b><%= data.secondHeading %></b><br><span><%= data.memberData.company_name_eng %></span></p> -->
                                 <p style="line-height: 1.5rem;">
                                     <b>مشروع قانون ل,<%= data.secondHeading %></b><br>
                                         <span><%= data.memberData.company_name_eng %>
                                     </p>
-                            <!-- <address>
-                                <p style="line-height: 1.5rem;">
-                                    POBOX: <span><%= data.memberData.address.zip %></span><br>
-                                    Mobile: <span><%= data.memberData.mobile %></span><br>
-                                    <span><%= data.memberData.address.countryName %>, <%= data.memberData.address.stateName %>, <%= data.memberData.address.cityName %></span>
-                                </p>
-                            </address> -->
+                          
                             <address>
                                 <p style="line-height: 1.5rem;">
                                     <span><%= data.memberData.address.zip %></span> <span><b>: صندوق بريد</b></span><br>
@@ -223,13 +214,7 @@
                             </address>
                         </td>
                         <!-- Date and Transaction Information -->
-                        <!-- <td width="50%" class="text-right">
-                            <p class="p-text" style="line-height: 1.5rem;">
-                                <b>Date of Issue:</b> <span><%= data.currentDate.day %></span>-<span><%= data.currentDate.month %></span>-<span><%= data.currentDate.year %></span><br>
-                                <b>Transaction ID:</b> <span><%= data.cart.transaction_id %></span><br>
-                                <b>Membership Category:</b> <span><%= data.memberData.membership_otherCategory %></span><br>
-                            </p>
-                        </td> -->
+                    
                         <td width="50%" class="text-right">
                             <p class="p-text text-right" style="line-height: 1.5rem;">
                                 <span><%= data.currentDate.day %></span>-<span><%= data.currentDate.month %></span>-<span><%= data.currentDate.year %></span> <b>: تاريخ الإصدار</b><br>
@@ -244,29 +229,17 @@
                     <tr>
                         <!-- Payment Type and Membership Type -->
                         <td width="50%">
-                            <!-- <p class="p-text">
-                                <b>Type of Payment:</b> 
-                                <%= data.memberData.registeration %>
-                            </p> -->
+                           
                                 <p class="p-text"> 
                                     <%= data.memberData.registeration %>
                                     <b>: نوع العملية </b>
                                 </p>
-                            <!-- <p class="p-text">
-                                <b>Membership Type:</b> <%= data.memberData.gtin_subscription.products.member_category_description %>
-                            </p> -->
+                          
                             <p class="p-text"><%= data.memberData.gtin_subscription.products.member_category_description %>
                                 <b>: نوع العضوية </b>
                             </p>
 
-                            <!-- <p class="p-text">
-                                <b>Payment Method</b> 
-                                <% if (data.cart.payment_type === 'bank_transfer') { %>
-                                    Bank Transfer
-                                <% } else { %>
-                                    Bank Transfer
-                                <% } %>
-                            </p> -->
+                         
                             <p class="p-text">
                                 <% if (data.cart.payment_type === 'bank_transfer') { %>
                                     Bank Transfer
@@ -274,9 +247,16 @@
                                     Bank Transfer
                                 <% } %> 
                                 <b>: طريقة الدفع </b></p>
+                
+
+                                <% if (data.type === 'downgrade' && data.cart.cart_items[0].newDowngradeYearlyFee) { %>
+                                    <p class="p-text">
+                                        <b>رسوم الاشتراك السنوية الجديدة:</b> <%= data.cart.cart_items[0].newDowngradeYearlyFee %>
+                                    </p>
+                                <% } %>
+
                         </td>
                     </tr>
-                    <!-- Add any additional rows as needed -->
                 </table>
                 
 
@@ -285,39 +265,56 @@
               
               <!-- Invoice Items Table -->
               <table class="table-suply table-sm" width="100%" cellspacing="0" cellpadding="0" style="font-size: 1.2rem;">
-                <!-- <tr class="p-text text-bold" style="background-color: #003D79; color: white;">
-                    <th colspan="2">#</th>
-                    <th colspan="4">Description</th>
-                    <th colspan="2">Registration Fee</th>
-                    <th colspan="2">Yearly Fee</th>
-                    <th colspan="2">SubTotal</th>
-                </tr> -->
-                <tr class="p-text text-bold" style="background-color: #003D79; color: white;">
-                        <th colspan="2">المجموع</th>
-                        <th colspan="2">الرسوم السنوية</th>
-                        <th colspan="2">رسوم التسجيل</th>
-                        <th colspan="4">الوصف</th>
+              
+
+                    <tr class="p-text text-bold" style="background-color: #003D79; color: white;">
                         <th colspan="2">#</th>
+                        <th colspan="4">الوصف</th>
+                        <th colspan="2">رسوم التسجيل</th>
+                        <% if (data.type === 'downgrade') { %>
+                            <!-- لا تعرض عمود الرسوم السنوية -->
+                        <% } else { %>
+                            <th colspan="2">رسوم السنوية</th>
+                        <% } %>
+                        <% if (data.type === 'downgrade') { %>
+                            <th colspan="4">المجموع الفرعي</th>
+                        <% } else { %>
+                            <th colspan="2">المجموع الفرعي</th>
+                        <% } %>
                     </tr>
 
+
+                
                 <% data.cart.cart_items.forEach((item, index) => { %>
                     <tr>
                         <td colspan="2" class="text-center p-text"><%= index + 1 %></td>
                         <td colspan="4" class="p-text text-left"><%= item.productName %></td>
                         <td colspan="2" class="p-text text-right"><%= item.registration_fee %></td>
-                        <td colspan="2" class="p-text text-right"><%= item.yearly_fee %></td>
-                       
-                        <td colspan="2" class="text-right p-text text-left"><%= parseInt(item.registration_fee, 10) + parseInt(item.yearly_fee, 10) %></td>
+                        <% if (data.type === 'downgrade') { %>
+                            <!-- لا تعرض رسوم السنوية -->
+                        <% } else { %>
+                            <td colspan="2" class="p-text text-right"><%= item.yearly_fee %></td>
+                        <% } %>
+                        <% if (data.type === 'downgrade') { %>
+                            <td colspan="4" class="text-right p-text text-left"><%= parseInt(item.registration_fee, 10) %></td>
+                        <% } else { %>
+                            <td colspan="2" class="text-right p-text text-left"><%= parseInt(item.registration_fee, 10) + parseInt(item.yearly_fee, 10) %></td>
+                        <% } %>
                     </tr>
                 <% }); %>
 
+
                 <tr style="background-color: #003D79; color: white; font-weight: bold;">
-                    <td colspan="10" class="text-bold p-text text-left">Total</td>
+                    <td colspan="10" class="text-bold p-text text-right">الإجمالي</td>
                     <% let totalPrice = 0; %>
                     <% data.cart.cart_items.forEach((item) => { %>
-                        <% totalPrice += parseInt(item.registration_fee, 10) + parseInt(item.yearly_fee, 10); %>
+                        <% if (data.type === 'downgrade') { %>
+                            <% totalPrice += parseInt(item.registration_fee, 10); %>
+                        <% } else { %>
+                            <% totalPrice += parseInt(item.registration_fee, 10) + parseInt(item.yearly_fee, 10); %>
+                        <% } %>
                     <% }); %>
-                    <td colspan="2" class="text-bold p-text text-right"><%= totalPrice %></td>
+                    <td colspan="2" class="text-bold p-text text-left"><%= totalPrice %></td>
                 </tr>
             </table><br>
 
@@ -325,68 +322,44 @@
                
 
                 <div>
-                    <!-- <p class="p-text" style="line-height: 0.5;">This is a system generated document and does not
-                        require any signature and stamp.</p> -->
+                
                         <p class="p-text" style="line-height: 0.5;">
                             ھذا المستند تم إنشاؤه الكترونيا بواسطة النظام ولا يتطلب أي توقيع أو ختم
                         </p>
                 </div>
 
                 <!-- Bank Details Table -->
+              
                 <table class="table-suply table-sm" width="100%" cellspacing="0" cellpadding="0" style="font-size: 1.2rem;">
                     <tr class="p-text text-bold" style="background-color: #003D79;">
-                        <!-- <td colspan="12" align="center" class="p-text text-left"
-                        style="color: white; font-weight: bold; font-size: 1.2rem;" 
-                        >For transfer to our bank account</td> -->
                         <td colspan="12" align="center" class="p-text text-right"
-                        style="color: white; font-weight: bold; font-size: 1.2rem;"
-                        >
-                            <b>
-                                للتحويل البنكي إلى حسابنا البنكي
-                            </b>
-                        </td>
+                        style="color: white; font-weight: bold; font-size: 1.2rem;" 
+                        >للتحويل البنكي إلى حسابنا البنكي</td>
                     </tr>
                     <tr>
-                        <!-- <td width="40%" colspan="4" class="text-left">Name</td>
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.title %></td> -->
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.title %></td>
                         <td width="40%" colspan="4" class="text-right">الاسم</td>
-
+                        <td width="60%" colspan="8" class="text-right"><%= data.company_details.title %></td>
                     </tr>
                     <tr>
-                        <!-- <td width="40%" colspan="4" class="text-left">Account Number</td>
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.account_no %></td> -->
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.account_no %></td>
                         <td width="40%" colspan="4" class="text-right">رقم الحساب</td>
+                        <td width="60%" colspan="8" class="text-right"><%= data.company_details.account_no %></td>
                     </tr>
                     <tr>
-                        <!-- <td width="40%" colspan="4" class="text-left">IBAN NO</td>
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.iban_no %></td> -->
-                        <td width="60%" colspan="8" class="text-left">
-                            <%= data.company_details.iban_no %>
-                        </td>
-                        <td width="40%" colspan="4" class="text-right">
-                            رقم الآيبان
-                        </td>
+                        <td width="40%" colspan="4" class="text-right">رقم الآيبان</td>
+                        <td width="60%" colspan="8" class="text-right"><%= data.company_details.iban_no %></td>
                     </tr>
                     <tr>
-                        <!-- <td width="40%" colspan="4" class="text-left">Bank Name</td>
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.bank_name %></td> -->
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.bank_name %></td>
                         <td width="40%" colspan="4" class="text-right">اسم البنك</td>
+                        <td width="60%" colspan="8" class="text-right"><%= data.company_details.bank_name %></td>
                     </tr>
                     <tr>
-                        <!-- <td width="40%" colspan="4" class="text-left">Bank Swift Code</td>
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.bank_swift_code %></td> -->
-                        <td width="60%" colspan="8" class="text-left"><%= data.company_details.bank_swift_code %></td>
                         <td width="40%" colspan="4" class="text-right">الرمز المختصر للبنك</td>
+                        <td width="60%" colspan="8" class="text-right"><%= data.company_details.bank_swift_code %></td>
                     </tr>
                 </table><br>
 
-
                 <div>
-                    <!-- <p class="p-text" style="line-height: 0.5;">*Upon transfer, Please upload a copy of transfer receipt
-                        from your account.</p> -->
+                
                         <p class="p-text" style="line-height: 0.5;">
                             * بعد التحويل ، يرجى تحميل نسخة من إيصال التحويل من حسابك.
                 </div>
@@ -396,7 +369,7 @@
        
     </center>
    
-    <!----------------------------->
+
     <footer>
         <table class="" width="100%" cellspacing="0" cellpadding="0"
             style="border:none; font-size: 1.2rem; line-height: 0.5 rem;">
@@ -430,10 +403,7 @@
                                 <i class="fas fa-map-marker" aria-hidden="true"></i>
                             </td>
                             <td style="padding-left: 10px;">
-                                <!-- <span>
-                                    King Fahad Branch Road, Al-Moatamarat District
-                                    P.O.Box 16683 Riyadh 11474, Saudi Arabia
-                                </span> -->
+                              
                                 <span>
                                     طريق الملك فهد ، حي المعتمرات
                                     ص.ب 16683 الرياض 11474 ، المملكة العربية السعودية
