--- a/Backend/views/pdf/customInvoice_Ar.ejs
+++ b/Backend/views/pdf/customInvoice_Ar.ejs
@@ -200,7 +200,7 @@
                         <!-- Billing Information -->
                         <td width="50%">
                                 <p style="line-height: 1.5rem;">
-                                    <b>مشروع قانون ل,<%= data.secondHeading %></b><br>
+                                    <b><%= data.secondHeading %></b><br>
                                         <span><%= data.memberData.company_name_eng %>
                                     </p>
                           
